--- a/socially/client/party-details/party-details.ng.html
+++ b/socially/client/party-details/party-details.ng.html
@@ -1,3 +1,16 @@
+<form>
+  <label for="name">Name</label>
+  <input type="text" [(ng-model)]="party.name" id="name">
+
+  <label for="description">Description</label>
+  <input type="text" [(ng-model)]="party.description" id="description">
+
+  <button type="submit">Save</button>
+  <button>Reset form</button>
+  <button [router-link]="['/parties-list']">Cancel</button>
+</form>
+
+<!-- test if ng-model is working. Updated on change -->
 <header>
   <h2>{{party.name}}</h2>
 
