--- a/socially/client/party-details/party-details.ng.html
+++ b/socially/client/party-details/party-details.ng.html
@@ -1,4 +1,4 @@
-<form>
+<form (submit)="add(party)">
   <label for="name">Name</label>
   <input type="text" [(ng-model)]="party.name" id="name">
 
@@ -9,10 +9,3 @@
   <button>Reset form</button>
   <button [router-link]="['/parties-list']">Cancel</button>
 </form>
-
-<!-- test if ng-model is working. Updated on change -->
-<header>
-  <h2>{{party.name}}</h2>
-
-  <p>{{party.description}}</p>
-</header>
