--- a/socially/client/parties-form/parties-form.ng.html
+++ b/socially/client/parties-form/parties-form.ng.html
@@ -1,4 +1,4 @@
-<form [ng-form-model]="partiesForm" (submit)="add(f.value)" #f="form">
+<form [ng-form-model]="partiesForm" (submit)="add()">
   <label>Name</label>
   <input type="text" ng-control="name">
   <label>Description</label>
