--- a/socially/client/index.html
+++ b/socially/client/index.html
@@ -2,6 +2,9 @@
   <base href="/">
 </head>
 <body>
+  {{> loginButtons}}
+
   <app></app>
+
   <script>System.import('client/app')</script>
 </body>
